--- a/박수정/styles/carousel.scss
+++ b/박수정/styles/carousel.scss
@@ -2,6 +2,7 @@
 
 .slider {
     &__container {
+        position: relative;
         overflow: hidden;
     }
 
@@ -16,7 +17,14 @@
         display: flex;
         justify-content: center;
         align-content: center;
-        // width: 100%;
-        // height: 100%;
+    }
+
+    &__navigation {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
     }
 }
