--- a/박수정/styles/carousel.scss
+++ b/박수정/styles/carousel.scss
@@ -7,6 +7,7 @@
     }
 
     &__wrapper {
+        position: relative;
         display: flex;
         justify-content: flex-start;
         align-content: center;
