--- a/송창석/resources/css/style.css
+++ b/송창석/resources/css/style.css
@@ -1,5 +1,8 @@
 /* 공통 */
+.example{position:fixed;left:10px;top:10px;text-align:center;background-color:rgba(0,123,225,1)}
+.example a{display:block;width:100%;height:100%;padding:8px;font-weight:bold;font-size:15px;color:#fff}
 .hide{font-size:0;position:absolute;left:-9999px;clip:rect(0,0,0,0);}
+.flex{display:flex;height:100vh;align-items:center;justify-content:center}
 .img{display:block}
 .img img{width:100%;max-width:100%;vertical-align:top}
 #wrap,
@@ -9,8 +12,12 @@
 
 /* carousel */
 .container{overflow:hidden;display:inline-block;width:100%;position:relative;margin: 0 auto}
-.wrapper{transition:all 0.5s ease}
+.wrapper{height:100%}
 .wrapper:after{content:'';display:block;clear:both}
+.item{float:left;height:100%;position:relative}
+.item .num{width:30px;line-height:30px;position:absolute;left:0;top:0;color:#fff;background-color:#000;font-size:20px}
+
+/* arrow */
 .arrow{width:40px;height:40px;position:absolute;top:50%;margin-top:-20px;border-radius:50%;background-color:rgba(0,0,0,0.5);z-index:2;cursor:pointer}
 .arrow:hover{background-color:rgba(0,0,0,0.8)}
 .arrow:after{content:'';display:block;width:10px;height:10px;margin:0 auto;border-right:2px solid #fff;border-bottom:2px solid #fff}
@@ -18,4 +25,3 @@
 .arrow.next{right:0}
 .arrow.prev:after{transform:rotate(-225deg);}
 .arrow.next:after{transform:rotate(-45deg);}
-.item{float:left;height:100%}
