기본적인 기능 구현 완성(정리 전)

--- a/박수정/styles/carousel.scss
+++ b/박수정/styles/carousel.scss
@@ -8,9 +8,15 @@
 
     &__wrapper {
         position: relative;
+        left: 0;
         display: flex;
         justify-content: flex-start;
         align-content: center;
+        transition: left .5s ease;
+
+        &.transition--false {
+            transition: none;
+        }
     }
 
     &__item {
