--- a/박수정/styles/carousel.scss
+++ b/박수정/styles/carousel.scss
@@ -34,5 +34,44 @@
         justify-content: space-between;
         width: 100%;
     }
+}
+
 .control__container {
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+
+    ul {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        li {
+            &:not(:first-child) {
+                margin-left: 7px;
+            }
+
+        }
+    }
+}
+
+.pagination {
+    &__item {
+        button {
+            display: inline-block;
+            width: 10px;
+            height: 10px;
+            margin: 0;
+            padding: 0;
+            background-color: #fff;
+            border-radius: 50%;
+            border: none;
+            text-indent: -9999px;
+            transition: all .3s ease;
+        }
+
+        &--active button {
+            background-color: #6b6b6b;
+        }
+    }
 }
