자동재생, 재생/정지 기능 추가

--- a/박수정/styles/carousel.scss
+++ b/박수정/styles/carousel.scss
@@ -36,22 +36,31 @@
     }
 }
 
-.control__container {
-    position: absolute;
-    bottom: 10px;
-    width: 100%;
-
-    ul {
+.control {
+    &__container {
         display: flex;
         align-items: center;
         justify-content: center;
+        position: absolute;
+        bottom: 10px;
+        width: 100%;
 
-        li {
-            &:not(:first-child) {
-                margin-left: 7px;
+        ul {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            li {
+                &:not(:first-child) {
+                    margin-left: 7px;
+                }
+
             }
-
         }
+    }
+
+    &__player:not(:first-child) {
+        margin-left: 10px;
     }
 }
 
