--- a/박수정/styles/style.scss
+++ b/박수정/styles/style.scss
@@ -1,9 +1,7 @@
 @charset "utf-8";
 
-.slider {
-    &__container {
-        margin: 0 auto;
-        overflow: hidden;
-        outline: 1px dashed red;
-    }
+.user-slider {
+    margin: 0 auto;
+    overflow: hidden;
+    outline: 1px dashed red;
 }
