left에서 translate3d 변경

--- a/박수정/styles/carousel.scss
+++ b/박수정/styles/carousel.scss
@@ -5,11 +5,10 @@ $timer: .3s;
 .slider {
     &__wrapper {
         position: relative;
-        left: 0;
         display: flex;
         justify-content: flex-start;
         align-content: center;
-        transition: left $timer ease;
+        transition: all $timer ease;
 
         &.transition--false {
             transition: none;
