--- a/윤선지/css/slide.css
+++ b/윤선지/css/slide.css
@@ -5,10 +5,13 @@
 }
 
 .slider_wrap .slide_frame {
+    position: relative;
     overflow: hidden;
+    z-index: 10;
     width: 400px;
     height: 400px;
     margin: 0 auto;
+    display: block;
 }
 
 .slider_wrap .slide_bx {
@@ -60,4 +63,16 @@
 
 .slide_paging .page.on {
     background: #000;
+}
+
+.btn_play,
+.btn_stop {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+}
+
+.btn_play.on,
+.btn_stop.on {
+    background: red;
 }
